matched kanakkaalar security and cors configuration to fix razorpay connection